AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f7x],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "no")

RTEMS_BSPOPTS_SET([STM32F7_FAMILY_F7XXXX],[stm32f7*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_FAMILY_F7XXXX],[Chip belongs to the STM32F7XXXX family.])

RTEMS_BSPOPTS_SET([STM32F746xx],[stm32f7*],[1])
RTEMS_BSPOPTS_HELP([STM32F746xx],[A precessor macro used in HAL headers])

RTEMS_BSPOPTS_SET([STM32F7_DISCOVERY],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_DISCOVERY],[Which STM32F7 Board we are using. (STM32F7_DISCOVERY or STM32F7_EVAL2)])

RTEMS_BSPOPTS_SET([RTEMS_TARGET_PROCESSOR],[stm32f7*],[STM32F746xx])
RTEMS_BSPOPTS_HELP([RTEMS_TARGET_PROCESSOR],[The specific chip in the processor family that is used])

RTEMS_BSPOPTS_SET([TARGET_STM_PROCESSOR],[stm32f7*],[746])
RTEMS_BSPOPTS_HELP([TARGET_STM_PROCESSOR],[The specific chip in the processor family that is used])

RTEMS_BSPOPTS_SET([TARGET_STM_PROCESSOR_PREFIX],[stm32f7*],[7xx])
RTEMS_BSPOPTS_HELP([TARGET_STM_PROCESSOR_PREFIX],[The chip family number])

####################sud System Memory Address #########
RTEMS_BSPOPTS_SET([SYS_MEM_ADDR],[*],[0x1FF00000])
RTEMS_BSPOPTS_HELP([SYS_MEM_ADDR],[System Memory Address])

#################### Bootloader firmware address offset in system memory #########
RTEMS_BSPOPTS_SET([BOOTLOADER_OFFSET],[*],[0x4])
RTEMS_BSPOPTS_HELP([BOOTLOADER_OFFSET],[Bootloader firmware address offset in system memory])

#################### Memory Configuration ###############
RTEMS_BSPOPTS_SET([STM32_START_SDRAM],[*],[0xC0000000])
RTEMS_BSPOPTS_HELP([STM32_START_SDRAM],[The starting address of SDRAM])

RTEMS_BSPOPTS_SET([STM32_SDRAM_SIZE],[*],[0x800000])
RTEMS_BSPOPTS_HELP([STM32_SDRAM_SIZE],[The size of the external SDRAM])

RTEMS_BSPOPTS_SET([STM32_START_INTERNAL_SRAM],[*],[0x20010000])
RTEMS_BSPOPTS_HELP([STM32_START_INTERNAL_SRAM],[The starting address of SDRAM])

RTEMS_BSPOPTS_SET([STM32_INTERNAL_SRAM_SIZE],[*],[0x40000])
RTEMS_BSPOPTS_HELP([STM32_INTERNAL_SRAM_SIZE],[The size of the internal SRAM])

#################### Clock Configuration ###############
RTEMS_BSPOPTS_SET([STM32F7_HSE_OSCILLATOR],[*],[25000000])
RTEMS_BSPOPTS_HELP([STM32F7_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_SYSCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([STM32F7_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([SYSCLK_FREQUENCY],[*],[STM32F7_SYSCLK])
RTEMS_BSPOPTS_HELP([SYSCLK_FREQUENCY],[STM32F SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([HSI_FREQUENCY],[*],[16000000])
RTEMS_BSPOPTS_HELP([HSI_FREQUENCY],[STM32F internal high speed oscillator frquency in Hz])

RTEMS_BSPOPTS_SET([MAX_SYSCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([MAX_SYSCLK],[STM32F maximum system clock frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_HCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([STM32F7_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK1],[*],[42000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK2],[*],[54000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([APB1_CLK],[*],[STM32F7_PCLK1])
RTEMS_BSPOPTS_HELP([APB1_CLK],[STM32F APB1 CLK])

RTEMS_BSPOPTS_SET([APB2_CLK],[*],[STM32F7_PCLK2])
RTEMS_BSPOPTS_HELP([APB2_CLK],[STM32F APB2 CLK])

RTEMS_BSPOPTS_SET([STM32F7_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F7_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([HSE_AVAILABLE],[*],[1])
RTEMS_BSPOPTS_HELP([HSE_AVAILABLE],[Is external high speed oscillator present])

#################### Uart / Console Configuration ###############
RTEMS_BSPOPTS_SET([NUM_PROCESSOR_CONSOLE_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_CONSOLE_UARTS],[Number of UARTs used for serial consoles])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_UARTS],[*],[2])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_UARTS],[Number of UARTs used for non-console applications])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_1],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_1],[disable UART 1])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_2],[disable UART 2])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_3],[disable SART 3])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_4],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_4],[enable UART 4])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_5],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_5],[disable UART 5])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_6],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_6],[enable USART 6])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_7],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_7],[enable USART 7])

#################### I2C 1 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_ADDRESS],[*],[0x30F])
RTEMS_BSPOPTS_HELP([STM32_I2C1_ADDRESS],[I2C 1 own address])

RTEMS_BSPOPTS_SET([STM32_I2C1_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_I2C1_PORT],[GPIO Port for I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_SCL_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_I2C1_SCL_PIN],[SCK pin for I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_SDA_PIN],[*],[GPIO_PIN_7])
RTEMS_BSPOPTS_HELP([STM32_I2C1_SDA_PIN],[SDA pin for I2C 1])

#################### I2C2 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C2],[enable I2C 2])

#################### I2C3 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C3],[enable I2C 3])

#################### SPI 1 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_SPI1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_SPI1],[enable SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_PORT],[*],[GPIOA])
RTEMS_BSPOPTS_HELP([STM32_SPI1_PORT],[GPIO Port for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_SCK_PIN],[*],[GPIO_PIN_5])
RTEMS_BSPOPTS_HELP([STM32_SPI1_SCK_PIN],[SCK pin for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_MISO_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_SPI1_MISO_PIN],[MISO pin for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_MOSI_PIN],[*],[GPIO_PIN_7])
RTEMS_BSPOPTS_HELP([STM32_SPI1_MOSI_PIN],[MOSI pin for SPI 1])

#################### SPI 2 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_SPI2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_SPI2],[enable SPI 2])

#################### CAN 1 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_CAN1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_CAN1],[enable CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_TX_PIN],[*],[GPIO_PIN_9])
RTEMS_BSPOPTS_HELP([STM32_CAN1_TX_PIN],[TX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_RX_PIN],[*],[GPIO_PIN_8])
RTEMS_BSPOPTS_HELP([STM32_CAN1_RX_PIN],[RX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_CAN1_GPIO_PORT],[GPIO Port for CAN 1])

#################### CAN 2 ####################
RTEMS_BSPOPTS_SET([STM32_ENABLE_CAN2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_CAN2],[enable CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_TX_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_CAN2_TX_PIN],[TX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_RX_PIN],[*],[GPIO_PIN_5])
RTEMS_BSPOPTS_HELP([STM32_CAN2_RX_PIN],[RX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_CAN2_GPIO_PORT],[GPIO Port for CAN 2])


RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
RTEMS_BSP_LINKCMDS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
